testdata/baselines/reference/submodule/conformance/override_js3.errors.txt
a.js(9,5): error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'B'.


==== a.js (1 errors) ====
    class B {
        foo (v) {}
        fooo (v) {}
    }
    
    class D extends B {
        override foo (v) {}
        /** @override */
        fooo (v) {}
        ~~~~
!!! error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'B'.
    }
    